# wordle-tui

./: .gitignore  README.md  pyproject.toml  wordle_app.py
