[project]
name = "wordle-tui"
version = "0.0.1"
dependencies = [
    "textual>=0.1.14",
    "pyperclip>=1.8.2",
]
requires-python = ">=3.7"

[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm.scripts]
start = "python wordle_app.py"
