[project]
name = "wordle-tui"
version = "0.0.1"
dependencies = [
    "textual>=0.1.14",
    "pyperclip>=1.8.2",
    "platformdirs>=2.4.1",
]
requires-python = ">=3.7"

[project.scripts]
wordle = "wordle_app:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
includes = ["*.gz", "wordle_app.py"]

[tool.pdm.scripts]
start = "python wordle_app.py"
